tests/NormalTests/paczka1/small_fuzzy/49146778.err
Error in line 2: V9CADiIQMry S515 94,1
Error in line 10: 2Xz A174 90,0
